# pi-home-dashboard

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
templates/: login.html
