[package]
name = "pi-home-dashboard"
version = "0.1.0"
authors = ["Marwan SMOUNI <marwan-smouni@hotmail.fr>"]
description = "A simple web server for Raspberry Pi"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["tokio", "original-uri"] }
axum-extra = { version = "0.10", features = [
    "typed-header",
    "cookie",
] } # provides TypedHeader, Host, other useful extractors
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
headers = "0.4" # typed header types like UserAgent
uuid = { version = "1.4", features = ["v4"] }
